# CPCD

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: msvc.yml
